# gptquery

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
advanced_usage/: index.html
architecture/: index.html
data/: citation_data_validated.csv  df_golden_mini.csv  ppxl.csv  ppxl2.csv
data/prompts/: 20250620_prompt.txt  20250626_prompt.txt  20250627_prompt.txt  20259626_prompt1.txt
data/uot25rev/: cmlr_authors_sample.parquet
data/validation/: validation_data.csv  validation_data_ids.csv  validation_data_output.csv
devsquickstart/: index.html
docs/: advanced_usage.md  architecture.md  devsquickstart.md  index.md  quickstart.md
docs/tools/: eulaw_citations.md
gptquery/: __init__.py
gptquery/core/: __init__.py  client.py  execution_logger.py  visionclient.py
gptquery/estimation/: __init__.py  cost_estimator.py  prompt_generator.py  tokens.py
gptquery/processing/: __init__.py  file_encoding.py  throttling.py  utils.py
gptquery/tools/: __init__.py
gptquery/tools/_templates/: log.py
gptquery/utils/: __init__.py  data_prep.py
notebooks/: test_cost_compare.ipynb  test_gptclients.ipynb  test_tool_eulaw_citations.ipynb  test_tool_text_extraction.ipynb
quickstart/: index.html
search/: search_index.json
stylesheets/: overrides.css
tests/: README.md  __init__.py
tests/gptquery_core/: __init__.py  test_core_logger.py  test_extract_integration.py
tests/tool_eulaw_citations/: __init__.py  entry_extraction_model_test.py
tools/eulaw_citations/: index.html
(+29 files in other folders)
