[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "gptquerytools"
version = "0.0.2"
description = "GPTQuery is a modular Python framework for building, orchestrating, and deploying AI-powered tools across domains."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mauricio Mandujano Manriquez" }]
license = "MIT"
keywords = ["AI", "tools", "framework", "research", "GPT", "modular"]
dependencies = [
    "pandas>=2.0",
    "requests>=2.32",
    "tokencost>=0.1.26",
    "tiktoken>=0.12.0",
    "IPython>=8.26.0"
]

[project.urls]
homepage = "https://github.com/mauriciomm7/gptquery"
issues = "https://github.com/mauriciomm7/gptquery/issues"
